--- a/classes/production/MyMod_main/assets/mymod/lang/en_us.lang
+++ b/classes/production/MyMod_main/assets/mymod/lang/en_us.lang
@@ -1,13 +1,18 @@
 #PARSE_ESCAPES
 
 tile.mymod.fast_furnace.name=Fast Furnace
+tile.mymod.generator.name=Generator
 tile.mymod.fancy_ore.name=Fancy Ore
 
 item.mymod.fancy_ingot.name=Fancy Ingot
 
-itemGroup.mymod=My Mod Tutorial
+itemGroup.mymod=My Mod
 
 message.mymod.fast_furnace=\
     @aEnergy: %d\n\
     @aItems: %d -> %d\n\
     @fFast furnace
+
+message.mymod.generator=\
+    @aEnergy: %d\n\
+    @fPower Generator
