After Episode 16, make first entity, the guard that follows and attacks

--- a/classes/production/MyMod_main/assets/mymod/lang/en_us.lang
+++ b/classes/production/MyMod_main/assets/mymod/lang/en_us.lang
@@ -6,6 +6,8 @@ tile.mymod.fancy_ore.name=Fancy Ore
 
 item.mymod.fancy_ingot.name=Fancy Ingot
 
+entity.mymod_guard.name=Guard
+
 itemGroup.mymod=My Mod
 
 message.mymod.fast_furnace=\
