After Episode 17, make puzzle game, small bug of not always being solvable is noted

--- a/classes/production/MyMod_main/assets/mymod/lang/en_us.lang
+++ b/classes/production/MyMod_main/assets/mymod/lang/en_us.lang
@@ -3,6 +3,7 @@
 tile.mymod.fast_furnace.name=Fast Furnace
 tile.mymod.generator.name=Generator
 tile.mymod.fancy_ore.name=Fancy Ore
+tile.mymod.puzzle.name=Puzzle
 
 item.mymod.fancy_ingot.name=Fancy Ingot
 
